[OPENMEETINGS-1267] screen-sharing rtmp url match the url of main app
git-svn-id: https://svn.apache.org/repos/asf/openmeetings/application/branches/3.1.x@1720210 13f79535-47bb-0310-9956-ffa450edef68